--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/MM1132/chat#readme",
   "dependencies": {
+    "date-and-time": "^2.3.0",
+    "dateformat": "^5.0.3",
     "express": "^4.17.3",
     "http": "0.0.1-security",
     "socket.io": "^4.4.1",
+    "sqlite3": "^5.0.2",
     "ws": "^8.5.0"
   }
 }
